compiler/testData/diagnostics/tests/enum/inheritFromEnumEntry.fir.kt
enum class E {
    ENTRY
}

class A : <!OTHER_ERROR!>E.ENTRY<!>
